kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: homework
  labels:
    app.kubernetes.io/name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: check
                operator: In
                values:
                - homework
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: web-server
        image: nginx:1.14.2
        ports:
        - containerPort: 80 #running the web server on port 8000
          name: http-web-svc
        volumeMounts:
        - name: homeworkdir
          mountPath: /homework/ #creating a folder homework in the container
        command: ['sh', '-c', 'ls -la /homework'] #displaying the contents of the homework folder
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "rm /homework/index.html"]
        readinessProbe:
          httpGet:
            path: /index.html
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: homeworkdir
        emptyDir: {}
  strategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 1
