kubernetes-networks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /homepage
spec:
  rules:
  - host: "homework.otus"
    http:
      paths:
        - path: /homepage
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port:
                number: 80
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port:
                number: 80
